# CUDA_LDPC

./: .gitignore  README.md
bldpc_new/: CMakeLists.txt  decoder.cu  decoder.cuh  define.cuh  encoder.cu  encoder.cuh  includelib.cuh  main.cu  simu.cu  simu.cuh  struct.cuh
bldpc_实习/: CMakeLists.txt  J10_L60_Z160_BlockH.txt  J12_L24_Z96_BlockH.txt  J12_L60_Z160_BlockH.txt  J15_L30_Z1280_BlockH.txt  J15_L60_Z160_BlockH.txt  J20_L60_Z160_BlockH.txt  J24_L60_Z160_BlockH.txt  J30_L60_Z160_BlockH.txt  J32_L64_Z64_BlockH.txt  J36_L60_Z160_BlockH.txt  J40_L60_Z160_BlockH.txt  J48_L60_Z160_BlockH.txt  J4_L24_Z256_BlockH.txt  J4_L24_Z512_BlockH.txt  J4_L24_Z96_BlockH.txt  J6_L24_Z96_BlockH.txt  J8_L24_Z96_BlockH.txt  LDPC_Decoder.cu  LDPC_Decoder.cuh  LDPC_Encoder.cu  LDPC_Encoder.cuh  PON_LDPC.txt  Simulation.cu  Simulation.cuh  define.cuh  main.cu  struct.cuh
myNBLDPC/: BDS.576.288.GF.64.txt  CMakeLists.txt  FER_test.txt  LDPC_N576_K288_GF64_d1_exp.txt  LDPC_N576_K480_GF256_exp.txt  LDPC_N96_K48_GF256_d1_exp.txt  SSPA_J4_L24_Z96_Simulation_result.txt  Tanner_74_9_Z128_GF16.txt
myNBLDPC/include/: Decode_GPU.cuh  GF.cuh  GF.h  LDPC_Decoder.cuh  LDPC_Decoder.h  LDPC_Encoder.cuh  LDPC_Encoder.h  Simulation.cuh  Simulation.h  codeword_test.h  define.cuh  define.h  struct.cuh  struct.h
myNBLDPC/src/: Decode_GPU.cu  GF.cpp  GF.cu  LDPC_Decoder.cpp  LDPC_Decoder.cu  LDPC_Encoder.cpp  LDPC_Encoder.cu  Simulation.cpp  Simulation.cu  main.cu  struct.cpp  struct.cu
